# bcgX_backend

./: pyproject.toml
app/: main.py
app/api/v1/: authRoutes.py  routes.py  userRoutes.py
app/core/: database.py
app/dtos/: products.py  users.py
app/models/: __init__.py  categories.py  customerRating.py  pricing_forecast.py  products.py  users.py
app/utils/: apiResponse.py
